Fixed Spacing Errors
- initial nav spaced too far to the right
- header spaced incorrectly
- removed extra side spacing on second down arrow

--- a/FrontEnd/portfolio/components/home.layout.module.css
+++ b/FrontEnd/portfolio/components/home.layout.module.css
@@ -10,15 +10,19 @@
   margin: 0 auto;
 }
 
-.flexContainer {
+.flexContainer, .flexCenterContainer {
   display: flex;
   flex-direction: column;
+}
+
+.flexCenterContainer {
+  align-items: center;
 }
 
 .rowContainer {
   width: 100%;
   padding: 0 1rem;
-  margin: 0 auto 3rem;
+  margin: 0 0 3rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -39,7 +43,9 @@
   line-height: 1.2;
   font-weight: 800;
   letter-spacing: -0.05rem;
-  margin: 1rem 0;
+  width: 100%;
+  margin: 1rem auto;
+  text-align: center;
 }
 
 .largeCenterHeader:hover {
@@ -52,6 +58,7 @@
 }
 
 .header {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -117,8 +124,8 @@
 }
 
 .outlineContainer {
-  border-right: 1px solid #fff;
-  border-top: 4px solid #fff;
+  border-right: 0.1rem solid #fff;
+  border-top: 0.1rem solid #fff;
   display: flex;
   flex-direction: column;
   width: 100%;
